--- a/LMS/templates/login.html
+++ b/LMS/templates/login.html
@@ -11,8 +11,8 @@
     <div class="login-signup">
         <form action="#" method="POST" class="form-control">
             {% csrf_token %}
-           
-            <input type="email" id="email" name="email" placeholder="Email">
+            <input type="email" id="email" name="email" placeholder="Email" class="form">
+            <input type="password" id="password", name="Password" placeholder="Password" class="form">
             <br>
             <button class="login-btn">Log In</button>
         </form>
