--- a/LMS/templates/Manager/dashboard.html
+++ b/LMS/templates/Manager/dashboard.html
@@ -3,7 +3,7 @@
 {% block 'title' %}Manager Dashboard{% endblock %}
 
 {% block 'content' %}
-
+    {% include "master/partials.html" %}
 
 
 {% endblock %}
